# demo-app

./: AGENTS.md  README.md  pyproject.toml
.agent/: agent-config.yml
.agent/policies/: closed_world.yaml  tools.yaml
.gitea/workflows/: ci.yaml
src/demo_app/: __init__.py  auth_service.py  math_service.py
tests/: test_auth_service.py  test_math_service.py
